backport of commit 783706809b5c6458db64cdc880c2fd9c22002a7a

--- a/website/content/docs/release-notes/1.10.mdx
+++ b/website/content/docs/release-notes/1.10.mdx
@@ -15,11 +15,11 @@ We encourage you to upgrade to the latest release to take advantage of the new b
 
 Some of these enhancements and changes in this release include:
 
-- Ability to view client counts per auth (UI and API), and changes to clients over months (API), providing more granular visibility into clients.
+- Ability to view client counts per auth and changes to clients over months, therefore, providing more granular visibility into clients.
 - Extended the `sys/remount` API endpoint to support moving secrets engines and auth method mounts from one location to another, within a namespace or across namespaces.
 - Improved security posture that includes MFA on login for Vault OSS customers.
 - Ability to implicitely achieve consistency via tokens.
-- Support of PKCE on Vault’s OIDC auth method with with Telemetry support for the Vault Agent.
+- Support of PKCE on Vault’s OIDC auth method with Telemetry support for the Vault Agent.
 - Improvement of key areas and parity to support using Terraform Provider with Vault.
 
 ## New Features
