--- a/website/content/docs/release-notes/1.10.mdx
+++ b/website/content/docs/release-notes/1.10.mdx
@@ -52,7 +52,7 @@ We now support a more streamlined method for managing [KV v2 secrets](/api-docs/
 
 ### DB2 Dynamic Secrets support
 
-Vault now supports credential management for IBM DB2 by leveraging the LDAP security plugin for Db2 and Vault’s OpenLDAP secrets engine. This allows Db2 to offload authentication and authorization to the LDAP security plugin and allows Vault to manage static credentials or even generate dynamic users. For more details, refer to the [IBM Db2 Credentials Management](https://learn.hashicorp.com//tutorials/vault/ibm-db2-openldap) tutorial.
+We now support an additional method for managing KV v2 secrets to maintain least priviledge security in certain types of automated environments. This feature creates a new PATCH capability that enables partial updates to KV v2 secrets without requiring the READ priviledge to the entire endpoint for an entity. For more details, refer to the [IBM Db2 Credentials Management](https://learn.hashicorp.com//tutorials/vault/ibm-db2-openldap) tutorial.
 
 ### Temporal Transit Key rotation
 
