backport of commit 96daf7839fd526a665ba018661c77ee4a5db5f8f

--- a/website/content/docs/release-notes/1.10.mdx
+++ b/website/content/docs/release-notes/1.10.mdx
@@ -40,7 +40,7 @@ Vault’s support to act as an OIDC provider is now generally available. Further
 
 ### Caching support for Vault Lambda Extension
 
-With 0.6.0, Vault Lambda Extension supports [caching])(https://github.com/hashicorp/vault-lambda-extension#caching) in the local proxy server to avoid proxying every request to enable setting expiry time and invalidate cache, as needed.
+With 0.6.0, Vault Lambda Extension supports [caching](https://github.com/hashicorp/vault-lambda-extension#caching) in the local proxy server to avoid proxying every request to enable setting expiry time and invalidate cache, as needed.
 
 ### Terraform Provider for Vault
 
