add plugin learn resource

--- a/website/content/docs/plugins/plugin-development.mdx
+++ b/website/content/docs/plugins/plugin-development.mdx
@@ -82,6 +82,7 @@ tutorial.
 Other HashiCorp plugin development resources:
 
 * [vault-auth-plugin-example](https://github.com/hashicorp/vault-auth-plugin-example)
+* [Custom Secrets Engines](https://learn.hashicorp.com/collections/vault/custom-secrets-engine)
 
 ### Plugin Development - Resources - Community
 
