--- a/website/content/docs/plugins/index.mdx
+++ b/website/content/docs/plugins/index.mdx
@@ -19,7 +19,8 @@ and require no additional operator intervention to run. Built-in plugins are
 just like any other backend code inside Vault.
 
 To use a different or edited version of a built-in plugin, the plugin must be
-run as an external plugin.
+run as an external plugin. See [Overriding Built-in Plugins](/docs/upgrading/plugins#overriding-built-in-plugins)
+for details on how to override a built-in plugin in-place.
 
 ## External Plugins
 
