--- a/website/content/docs/release-notes/1.10.mdx
+++ b/website/content/docs/release-notes/1.10.mdx
@@ -52,7 +52,7 @@ We now support an additional method for managing [KV v2 secrets](/api-docs/secre
 
 ### DB2 Dynamic Secrets support
 
-This integration leverages existing functionality in Vault and we have recently validated the integration between DB2 and Vault. By leveraging the LDAP security plugin for Db2 and Vault’s OpenLDAP secrets engine, Db2 can offload authentication and authorization to the LDAP security plugin and allows Vault to manage static credentials or even generate dynamic users. For more details, refer to the [IBM Db2 Credentials Management](https://learn.hashicorp.com/tutorials/vault/ibm-db2-openldap) tutorial.
+Vault operators can leverage the openldap secrets engine to manage credentials for IBM DB2 and the LDAP security plugin for Db2. This allows Db2 to offload authentication and authorization to the LDAP security plugin and allows Vault to manage static credentials or even generate dynamic users. For more details, refer to the For more details, refer to the [IBM Db2 Credentials Management](https://learn.hashicorp.com/tutorials/vault/ibm-db2-openldap) tutorial.
 
 ### Temporal Transit Key rotation
 
