formatting, add redirects, correct multiplexing use case

--- a/website/content/docs/plugins/plugin-development.mdx
+++ b/website/content/docs/plugins/plugin-development.mdx
@@ -86,10 +86,6 @@ Other HashiCorp plugin development resources:
 
 ### Plugin Development - Resources - Community
 
-Community plugin examples/guides are developed by community members. HashiCorp
-does not validate these for correctness.
-
- - [Enigma (good starting point)](https://github.com/ixe013/benigma)
-
-Authors who wish to have their guides or examples listed may file a submission
-via a GitHub issue or directly open a pull request with changes to this page.
+See the [Plugin Portal](/docs/plugins/plugin-portal#community) to find
+Community plugin examples/guides developed by community members. HashiCorp does
+not validate these for correctness.
