--- a/website/content/docs/secrets/databases/custom.mdx
+++ b/website/content/docs/secrets/databases/custom.mdx
@@ -260,7 +260,8 @@ This factory function is a function that returns an object that implements the
 Some use cases that should avoid plugin multiplexing might include:
 
 * Plugin process level separation is required
-* The plugin shares state or a global cache which may leak data between each database config
+* Avoiding restart across all mounts/database connections for a plugin type on
+  crashes or plugin reload calls
 
 ## Upgrading database plugins to the V5 interface
 
