--- a/website/content/docs/plugins/plugin-architecture.mdx
+++ b/website/content/docs/plugins/plugin-architecture.mdx
@@ -56,14 +56,16 @@ author's part.
 
 ## Plugin Communication
 
-Vault creates a mutually authenticated TLS connection for communication with the
-plugin's RPC server. While invoking the plugin process, Vault passes a
-[wrapping token](/docs/concepts/response-wrapping) to the
-plugin process' environment. This token is single use and has a short TTL. Once
+Vault creates a mutually authenticated TLS connection for communication with
+the plugin's RPC server. Database secrets engines make use of the AutoMTLS
+feature of [go-plugin](github.com/hashicorp/go-plugin) which will automatically
+negotiate mTLS for transport authentication. For all other plugins, Vault
+passes a [wrapping token](/docs/concepts/response-wrapping) to the plugin
+process' environment. This token is single use and has a short TTL. Once
 unwrapped, it provides the plugin with a uniquely generated TLS certificate and
 private key for it to use to talk to the original Vault process.
 
-The [api_addr](/docs/configuration#api_addr) must be set in order for the
+The [`api_addr`](/docs/configuration#api_addr) must be set in order for the
 plugin process to establish communication with the Vault server during mount
 time. If the storage backend has HA enabled and supports automatic host address
 detection (e.g. Consul), Vault will automatically attempt to determine the
@@ -162,11 +164,11 @@ on implementing plugin multiplexing can be found in
 
 ## Troubleshooting
 
-#### Unrecognized remote plugin message
+### Unrecognized remote plugin message
 
 If the following error is encountered when enabling a plugin secret engine or
 auth method:
-   
+
 <CodeBlockConfig hideClipboard>
 
 ```sh
