backport of commit d3e53d21ec2e3e7f5b19a03b616f95fefc0e33e3

--- a/website/content/docs/concepts/oidc-provider.mdx
+++ b/website/content/docs/concepts/oidc-provider.mdx
@@ -102,7 +102,7 @@ A client resource represents an application that wants to delegate end-user auth
 to Vault using the OIDC protocol. The information provided by a client resource can be used
 to configure an OIDC [relying party](https://openid.net/specs/openid-connect-core-1_0.html#Terminology).
 
-The client must have the following configuration parameters:
+A client has the following configuration parameters:
 
 * **Redirect URIs**: limits the valid redirect URIs in an authentication request
 * **Assignments**: determine who can authenticate with the client
